--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "name": "ecommerce_app",
   "version": "1.0.0",
